--- a/styles/style.css
+++ b/styles/style.css
@@ -5,20 +5,17 @@
   gap: 3rem;
   margin-top: 4rem;
 }
-
 .content .card {
   background-color: rgb(171, 170, 170);
   padding-bottom: 2rem;
   border-radius: 0.5rem;
   border: 1px solid rgb(171, 170, 170);
 }
-
 .content .card img {
   border-radius: 0.5rem;
   height: 15rem;
   width: 15rem;
 }
-
 .content .card .description {
   margin-top: 0.8rem;
   display: flex;
@@ -26,40 +23,44 @@
   align-items: center;
   gap: 0.5rem;
 }
-
-.content .card .description>p:nth-child(1) {
+.content .card .description > p:nth-child(1) {
   font-size: 1rem;
 }
-
-.content .card .description>p:nth-child(2) {
+.content .card .description > p:nth-child(2) {
   font-size: 1.5rem;
   font-weight: 700;
 }
-
-.content .card .description>.add-cart-btn {
+.content .card .description > .add-cart-btn {
   cursor: pointer;
   border: none;
   border-radius: 0.2rem;
   padding: 0.3rem 0.8rem;
   font-weight: 600;
 }
-
-.content .card .description>.add-remove-btns>button {
+.content .card .description > .add-remove-btns {
+  display: none;
+}
+.content .card .description > .add-remove-btns > button {
   cursor: pointer;
   width: 1.6rem;
   border: none;
   border-radius: 0.1rem;
   font-weight: 700;
 }
-
-.content .card .description>.add-remove-btns>.counter {
+.content .card .description > .add-remove-btns > .counter {
   display: inline-block;
   margin: auto 1.2rem;
 }
 
-body .total-amount-container {
+.total-amount-container {
   display: flex;
+  justify-content: center;
   margin-top: 3rem;
+  font-size: 1.5rem;
+  font-weight: 550;
+}
+.total-amount-container .total-amount {
+  font-weight: 700;
 }
 
 * {
@@ -74,21 +75,21 @@ body {
 
 .header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 2rem 3rem;
   padding-bottom: 0;
 }
-
+.header h2 {
+  flex-grow: 1;
+}
 .header .cart-image {
   position: relative;
+  margin-left: 1.5rem;
 }
-
 .header .cart-image img {
   height: 2.5rem;
   width: 2.5rem;
 }
-
 .header .cart-image .count-in-cart {
   position: absolute;
   height: 1.8rem;
@@ -114,6 +115,4 @@ body {
   padding: 0.5rem 2rem;
   border-radius: 0.3rem;
   font-weight: 600;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
