Login Page Done

--- a/styles/contentStyle.scss
+++ b/styles/contentStyle.scss
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     gap: 3rem;
     margin-top: 4rem;
+    margin-bottom: 4rem;
 
     .card {
         background-color: rgb(171, 170, 170);
