--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,6 +18,7 @@
 
     h2 {
         flex-grow: 1;
+        cursor: pointer;
     }
 
     .login-signup-btn {
@@ -30,6 +31,7 @@
 
     h3 {
         display: none;
+        cursor: pointer;
     }
 
     .logout-btn {
@@ -43,6 +45,7 @@
         position: relative;
         margin-left: 1.5rem;
         margin-right: 1.5rem;
+        cursor: pointer;
 
         img {
             height: 2.5rem;
