--- a/styles/contentStyle.css
+++ b/styles/contentStyle.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .content {
   display: flex;
   justify-content: center;
@@ -11,6 +17,11 @@
   padding-bottom: 2rem;
   border-radius: 0.5rem;
   border: 1px solid rgb(171, 170, 170);
+  width: 15rem;
+  transition: transform 0.6s ease;
+}
+.content .card:hover {
+  transform: scale(1.04);
 }
 .content .card img {
   border-radius: 0.5rem;
@@ -26,6 +37,8 @@
 }
 .content .card .description > p:nth-child(1) {
   font-size: 1rem;
+  margin: 0.3rem 0.5rem;
+  text-align: center;
 }
 .content .card .description > p:nth-child(2) {
   font-size: 1.5rem;
@@ -56,8 +69,8 @@
 .total-amount-container {
   display: flex;
   justify-content: center;
-  margin-top: 3rem;
-  font-size: 1.5rem;
+  margin: 3rem 1rem;
+  font-size: 1.2rem;
   font-weight: 550;
 }
 .total-amount-container .total-amount {
