--- a/styles/contentStyle.scss
+++ b/styles/contentStyle.scss
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .content {
     display: flex;
     justify-content: center;
@@ -11,6 +16,12 @@
         padding-bottom: 2rem;
         border-radius: 0.5rem;
         border: 1px solid rgb(171, 170, 170);
+        width: 15rem;
+        transition: transform 0.6s ease;
+
+        &:hover {
+            transform: scale(1.04);
+        }
 
         img {
             border-radius: 0.5rem;
@@ -27,6 +38,8 @@
 
             >p:nth-child(1) {
                 font-size: 1rem;
+                margin: 0.3rem 0.5rem;
+                text-align: center;
             }
 
             >p:nth-child(2) {
@@ -65,8 +78,8 @@
 .total-amount-container {
     display: flex;
     justify-content: center;
-    margin-top: 3rem;
-    font-size: 1.5rem;
+    margin: 3rem 1rem;
+    font-size: 1.2rem;
     font-weight: 550;
 
     .total-amount {
