--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .content {
   display: flex;
   justify-content: center;
@@ -11,6 +17,11 @@
   padding-bottom: 2rem;
   border-radius: 0.5rem;
   border: 1px solid rgb(171, 170, 170);
+  width: 15rem;
+  transition: transform 0.6s ease;
+}
+.content .card:hover {
+  transform: scale(1.04);
 }
 .content .card img {
   border-radius: 0.5rem;
@@ -26,6 +37,8 @@
 }
 .content .card .description > p:nth-child(1) {
   font-size: 1rem;
+  margin: 0.3rem 0.5rem;
+  text-align: center;
 }
 .content .card .description > p:nth-child(2) {
   font-size: 1.5rem;
@@ -56,8 +69,8 @@
 .total-amount-container {
   display: flex;
   justify-content: center;
-  margin-top: 3rem;
-  font-size: 1.5rem;
+  margin: 3rem 1rem;
+  font-size: 1.2rem;
   font-weight: 550;
 }
 .total-amount-container .total-amount {
@@ -69,20 +82,39 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
 }
 
 .header {
   display: flex;
   align-items: center;
-  padding: 2rem 3rem;
+  flex-wrap: wrap;
+  padding: 2rem 0.5rem;
   padding-bottom: 1rem;
-  background-color: rgb(245, 235, 218);
+  background-color: rgb(255, 255, 255);
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 .header h2 {
-  flex-grow: 1;
   cursor: pointer;
+  flex-grow: 1;
+  font-size: 1.2rem;
+}
+.header .search-bar {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  order: 2;
+}
+.header .search-bar > .search {
+  width: 90%;
+  outline: none;
+  padding: 0.8rem 1rem;
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 0.3rem;
+  background-color: #F0F5FF;
 }
 .header .login-signup-btn {
   text-decoration: none;
@@ -94,6 +126,8 @@
 .header h3 {
   display: none;
   cursor: pointer;
+  font-style: italic;
+  opacity: 0.6;
 }
 .header .logout-btn {
   display: none;
@@ -103,8 +137,8 @@
 }
 .header .cart-image {
   position: relative;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
   cursor: pointer;
 }
 .header .cart-image img {
@@ -136,4 +170,28 @@
   padding: 0.5rem 2rem;
   border-radius: 0.3rem;
   font-weight: 600;
+}
+
+@media (min-width: 522px) {
+  .header h2 {
+    flex-grow: 0;
+  }
+  .header .search-bar {
+    order: 0;
+  }
+  .header .search-bar .search {
+    width: 80%;
+  }
+}
+@media (min-width: 768px) {
+  .header {
+    padding: 2rem 3rem;
+  }
+  .header h2 {
+    font-size: 1.6rem;
+  }
+  .header .cart-image {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
 }/*# sourceMappingURL=style.css.map */
