--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,20 +5,41 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
 }
 
 .header {
     display: flex;
     align-items: center;
-    padding: 2rem 3rem;
+    flex-wrap: wrap;
+    padding: 2rem 0.5rem;
     padding-bottom: 1rem;
-    background-color: rgb(245, 235, 218);
+    background-color: rgb(255, 255, 255);
     position: sticky;
     top: 0;
+    z-index: 1;
 
     h2 {
-        flex-grow: 1;
         cursor: pointer;
+        flex-grow: 1;
+        font-size: 1.2rem;
+    }
+
+    .search-bar {
+        display: flex;
+        justify-content: center;
+        flex-grow: 1;
+        order: 2;
+
+        >.search {
+            width: 90%;
+            outline: none;
+            padding: 0.8rem 1rem;
+            font-size: 1.1rem;
+            border: none;
+            border-radius: 0.3rem;
+            background-color: #F0F5FF;
+        }
     }
 
     .login-signup-btn {
@@ -32,6 +53,8 @@
     h3 {
         display: none;
         cursor: pointer;
+        font-style: italic;
+        opacity: 0.6;
     }
 
     .logout-btn {
@@ -43,8 +66,8 @@
 
     .cart-image {
         position: relative;
-        margin-left: 1.5rem;
-        margin-right: 1.5rem;
+        margin-left: 0.5rem;
+        margin-right: 1rem;
         cursor: pointer;
 
         img {
@@ -79,4 +102,35 @@
     padding: 0.5rem 2rem;
     border-radius: 0.3rem;
     font-weight: 600;
+}
+
+@media (min-width: 522px) {
+    .header {
+        h2 {
+            flex-grow: 0;
+        }
+
+        .search-bar {
+            order: 0;
+
+            .search {
+                width: 80%;
+            }
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .header {
+        padding: 2rem 3rem;
+
+        h2 {
+            font-size: 1.6rem;
+        }
+
+        .cart-image {
+            margin-left: 1.5rem;
+            margin-right: 1.5rem;
+        }
+    }
 }
