--- a/styles/style.scss
+++ b/styles/style.scss
@@ -104,6 +104,21 @@
     font-weight: 600;
 }
 
+.carousel {
+    width: 100%;
+    display: flex;
+    .carousel-item {
+        flex-shrink: 0;
+        width: 100%;
+        height: 100%;
+        img {
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+        }
+    }
+}
+
 @media (min-width: 522px) {
     .header {
         h2 {
@@ -132,5 +147,8 @@
             margin-left: 1.5rem;
             margin-right: 1.5rem;
         }
+    }
+    .carousel {
+        height: 400px;
     }
 }
