--- a/styles/style.css
+++ b/styles/style.css
@@ -175,16 +175,33 @@
 .carousel {
   width: 100%;
   display: flex;
+  position: relative;
+  overflow: hidden;
 }
 .carousel .carousel-item {
-  flex-shrink: 0;
   width: 100%;
   height: 100%;
+  flex-shrink: 0;
 }
 .carousel .carousel-item img {
   width: 100%;
   height: 100%;
   background-size: cover;
+}
+.carousel .carousel-dots {
+  display: flex;
+  position: absolute;
+  right: 45%;
+  bottom: 0;
+}
+.carousel .carousel-dots > span {
+  display: inline-block;
+  height: 0.8rem;
+  width: 0.8rem;
+  border-radius: 50%;
+  margin: 0.3rem;
+  background-color: rgb(255, 0, 0);
+  cursor: pointer;
 }
 
 @media (min-width: 522px) {
