--- a/styles/style.scss
+++ b/styles/style.scss
@@ -107,14 +107,31 @@
 .carousel {
     width: 100%;
     display: flex;
+    position: relative;
+    overflow: hidden;
     .carousel-item {
-        flex-shrink: 0;
         width: 100%;
         height: 100%;
+        flex-shrink: 0;
         img {
             width: 100%;
             height: 100%;
             background-size: cover;
+        }
+    }
+    .carousel-dots {
+        display: flex;
+        position: absolute;
+        right: 45%;
+        bottom: 0;
+        >span {
+            display: inline-block;
+            height: 0.8rem;
+            width: 0.8rem;
+            border-radius: 50%;
+            margin: 0.3rem;
+            background-color: rgb(255, 0, 0);
+            cursor: pointer;
         }
     }
 }
