--- a/styles/style.css
+++ b/styles/style.css
@@ -182,6 +182,7 @@
   width: 100%;
   height: 100%;
   flex-shrink: 0;
+  cursor: pointer;
 }
 .carousel .carousel-item img {
   width: 100%;
@@ -200,8 +201,24 @@
   width: 0.8rem;
   border-radius: 50%;
   margin: 0.3rem;
-  background-color: rgb(255, 0, 0);
+  background-color: #9f86c0;
   cursor: pointer;
+}
+
+.category {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  padding: 1rem;
+  margin: 0 1rem;
+  background-color: #a9d6e5;
+}
+.category > div {
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+.category > div:focus-within {
+  color: red;
 }
 
 @media (min-width: 522px) {
