--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,4 @@
-@import "./contentStyle.scss";
+@import "./content-style.scss";
 
 * {
     margin: 0;
@@ -113,6 +113,7 @@
         width: 100%;
         height: 100%;
         flex-shrink: 0;
+        cursor: pointer;
         img {
             width: 100%;
             height: 100%;
@@ -130,8 +131,24 @@
             width: 0.8rem;
             border-radius: 50%;
             margin: 0.3rem;
-            background-color: rgb(255, 0, 0);
+            background-color: #9f86c0;
             cursor: pointer;
+        }
+    }
+}
+
+.category {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1rem;
+    margin: 0 1rem;
+    background-color: #a9d6e5;
+    >div {
+        font-size: 1.4rem;
+        cursor: pointer;
+        &:focus-within{
+            color: red;
         }
     }
 }
