--- a/styles/style.scss
+++ b/styles/style.scss
@@ -105,6 +105,7 @@
 }
 
 .carousel {
+    padding: 0 0.5rem;
     width: 100%;
     display: flex;
     position: relative;
@@ -123,32 +124,17 @@
     .carousel-dots {
         display: flex;
         position: absolute;
-        right: 45%;
+        left: 50%;
         bottom: 0;
+        transform: translateX(-50%);
         >span {
             display: inline-block;
-            height: 0.8rem;
-            width: 0.8rem;
+            height: 0.6rem;
+            width: 0.6rem;
             border-radius: 50%;
             margin: 0.3rem;
             background-color: #9f86c0;
             cursor: pointer;
-        }
-    }
-}
-
-.category {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    padding: 1rem;
-    margin: 0 1rem;
-    background-color: #a9d6e5;
-    >div {
-        font-size: 1.4rem;
-        cursor: pointer;
-        &:focus-within{
-            color: red;
         }
     }
 }
@@ -167,6 +153,9 @@
             }
         }
     }
+    .carousel {
+        padding: 0 1rem;
+    }
 }
 
 @media (min-width: 768px) {
@@ -183,6 +172,6 @@
         }
     }
     .carousel {
-        height: 400px;
+        height: 350px;
     }
 }
