Category section and carousel added

--- a/styles/home-style.scss
+++ b/styles/home-style.scss
@@ -1,22 +1,26 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.content, .cart-content {
+
+.content,
+.cart-content {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 3rem;
-    margin-top: 4rem;
+    margin-top: 2rem;
     margin-bottom: 4rem;
     padding: 0 3rem;
 
     .card {
+        position: relative;
         background-color: rgb(171, 170, 170);
         padding-bottom: 2rem;
         border-radius: 0.5rem;
         border: 1px solid rgb(171, 170, 170);
         transition: transform 0.6s ease;
+
         &:hover {
             transform: scale(1.01);
         }
@@ -73,16 +77,68 @@
     }
 }
 
+.category-container {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem;
+
+    >p {
+        font-size: 0.8rem;
+        font-weight: 700;
+        cursor: pointer;
+    }
+
+    .active {
+        position: relative;
+    }
+
+    .active:before {
+        content: '';
+        position: absolute;
+        bottom: -2px;
+        border-bottom: 2px solid red;
+        animation: border_anim 0.5s linear forwards;
+    }
+}
+
+@keyframes border_anim {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
 .go-back-home {
-    position: relative;
-    top: 2rem;
-    left: 3rem;
-    text-decoration: none;
-    background-color: gray;
-    color: black;
-    padding: 0.5rem 2rem;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1rem;
+    margin-top: 1rem;
+
+    a {
+        text-decoration: none;
+        background-color: gray;
+        color: black;
+        padding: 0.5rem 2rem;
+        border-radius: 0.3rem;
+        font-weight: 600;
+    }
+}
+
+.remove-button-from-cart {
+    position: absolute;
+    right: 0;
+    top: 0;
     border-radius: 0.3rem;
-    font-weight: 600;
+    border: none;
+    background-color: #ef233c;
+    padding: 0.3rem 0.5rem;
+    color: white;
+    font-size: 0.6rem;
+    cursor: pointer;
 }
 
 .total-amount-container {
@@ -96,20 +152,35 @@
         font-weight: 700;
     }
 }
+
 @media (min-width: 420px) {
-    .content, .cart-content {
+
+    .content,
+    .cart-content {
         padding: 0 2rem;
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
 @media (min-width: 650px) {
-    .content, .cart-content {
+
+    .content,
+    .cart-content {
         padding: 0 3rem;
         grid-template-columns: repeat(3, 1fr);
     }
+
+    .category-container {
+        >p {
+            font-size: 1.1rem;
+        }
+    }
 }
+
 @media (min-width: 1200px) {
-    .content,.cart-content {
+
+    .content,
+    .cart-content {
         padding: 0 4rem;
         grid-template-columns: repeat(4, 1fr);
     }
