--- a/styles/nav-style.scss
+++ b/styles/nav-style.scss
@@ -1,10 +1,12 @@
 $dark-blue-color: #023047;
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
 .header {
     position: sticky;
     top: 0;
@@ -16,15 +18,18 @@ $dark-blue-color: #023047;
     padding: 1.2rem 1rem;
     background-color: white;
     z-index: 5;
+
     .flipkart-logo {
         width: 6rem;
         cursor: pointer;
         text-align: center;
     }
+
     .search-bar {
         grid-column: 1/5;
         grid-row: 2/3;
-        .search{
+
+        .search {
             width: 100%;
             outline: none;
             font-size: 1rem;
@@ -34,11 +39,13 @@ $dark-blue-color: #023047;
             background-color: #F0F5FF;
         }
     }
+
     .user-name {
         text-align: center;
         font-size: 1rem;
         font-style: italic;
     }
+
     .login-button {
         text-decoration: none;
         background-color: $dark-blue-color;
@@ -48,7 +55,8 @@ $dark-blue-color: #023047;
         font-size: 0.9rem;
         text-align: center;
     }
-    .logout-button{
+
+    .logout-button {
         font-size: 0.9rem;
         padding: 0.2rem 0.5rem;
         border-radius: 0.3rem;
@@ -59,16 +67,19 @@ $dark-blue-color: #023047;
         text-align: center;
         display: none;
     }
+
     .cart-image {
         cursor: pointer;
         text-align: center;
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
+
         .cart-icon {
             height: 1.8rem;
             width: 1.8rem;
         }
+
         .count-in-cart {
             position: relative;
             bottom: -8px;
@@ -84,19 +95,23 @@ $dark-blue-color: #023047;
         }
     }
 }
-@media (min-width: 600px){
+
+@media (min-width: 600px) {
     .header {
         grid-template-columns: 1fr 7fr 2fr 1fr 1fr;
         grid-template-rows: 1fr;
+
         .flipkart-logo {
             width: 8rem;
             cursor: pointer;
             text-align: center;
         }
+
         .search-bar {
             grid-column: 2/3;
             grid-row: 1/2;
-            .search{
+
+            .search {
                 width: 90%;
                 outline: none;
                 font-size: 1.2rem;
@@ -106,20 +121,26 @@ $dark-blue-color: #023047;
                 background-color: #F0F5FF;
             }
         }
+
         .user-name {
             text-align: center;
             font-size: 1.2rem;
         }
-        .login-button, .logout-button{
+
+        .login-button,
+        .logout-button {
             font-size: 1.2rem;
         }
-        .cart-image{
+
+        .cart-image {
             text-align: center;
+
             .cart-icon {
                 height: 2.3rem;
                 width: 2.3rem;
             }
-            .count-in-cart{
+
+            .count-in-cart {
                 height: 1.4rem;
                 width: 1.4rem;
                 font-size: 1rem;
